hphp/test/slow/no_php/autoload.php.expectf

Fatal error: HHVM 4+ does not support PHP: %s/test/slow/no_php/autoload_foo.inc in %s/test/slow/no_php/autoload.php on line 12
